--- a/README
+++ b/README
@@ -7,6 +7,13 @@ Overview
 
 GTOC 8 Website: http://sophia.estec.esa.int/gtoc_portal/?page_id=560
 
+Algoritmo genético
+------------------
+
+Para ejecutar el algortimo, simplemente ejecutar "main.py".
+
+Los parámetros principales se encuentran en él, y son fáciles de modificar.
+
 Installation
 ------------
 
